[project]
name = "aave-monitor"
version = "0.1.0"
description = "Monitor AAVE V3 borrowing activity and correlate with price movements"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "rich>=13.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
aave-monitor = "aave_monitor.main:main"
